# sluggo

./: CMakeLists.txt
include/: sluggo_configuration.h
src/: main.cc  sluggo_configuration.cc
