cmake_minimum_required(VERSION 3.0.2)
set(PROJECT_NAME sluggo)
project(${PROJECT_NAME})

set(CMAKE_DEBUG_POSTFIX "_d")

set (SLUGGO_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set (SLUGGO_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include
  CACHE INTERNAL "Sluggo: Include Directories" FORCE)

set(CODEX_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/../codex CACHE FILEPATH "Codex Location")

set(CODEX_LIBRARY ${CODEX_LOCATION}/lib/codex${CMAKE_DEBUG_POSTFIX}${CMAKE_STATIC_LIBRARY_SUFFIX})
set(VULKAN_RENDERER_LIBRARY ${CODEX_LOCATION}/lib/VulkanRenderer${CMAKE_DEBUG_POSTFIX}${CMAKE_STATIC_LIBRARY_SUFFIX})
set(WINDOW_MANAGER_LIBRARY ${CODEX_LOCATION}/lib/WindowManager${CMAKE_DEBUG_POSTFIX}${CMAKE_STATIC_LIBRARY_SUFFIX})
set(CORE_INCLUDE_DIR ${CODEX_LOCATION}/core/include)
set(CODEX_INCLUDE_DIR ${CODEX_LOCATION}/codex/include)

include_directories(
  ${CORE_INCLUDE_DIR}
  ${CODEX_INCLUDE_DIR}
  ${SLUGGO_INCLUDE_DIR}
)

set(SLUGGO_SOURCE_FILES
  ${SLUGGO_SOURCE_DIR}/main.cc
  ${SLUGGO_SOURCE_DIR}/sluggo_configuration.cc
)

set(SLUGGO_INCLUDE_FILES
  ${SLUGGO_INCLUDE_DIR}/sluggo_configuration.h
)

add_executable(
  ${PROJECT_NAME}
  ${SLUGGO_SOURCE_FILES}
  ${SLUGGO_INCLUDE_FILES}
)

target_link_libraries(
  ${PROJECT_NAME}
  ${CODEX_LIBRARY}
  ${VULKAN_RENDERER_LIBRARY}
  ${WINDOW_MANAGER_LIBRARY}
)

if(WIN32)
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS")
  add_definitions(-DUNICODE -D_UNICODE)
endif()
